Test/Sema/Bad/bad_duplicate_global_2.py.err
CHECK: bad_duplicate_global_2.py:6:1: error: Duplicate declaration of identifier in same scope: x
CHECK-NEXT: x:int = 5
CHECK: 1 error generated!
